add offers in main page and remove additions

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="sec4-cards-container">
             <div class="sec4-card">
               <div class="sec4-card-img">
-                <img src="images/sec4-img1.jpg" alt="No image" />
+                <img src="images/home/sec4-img1.jpg" alt="No image" />
               </div>
               <div class="sec4-img-name">
                 <h2>Pyramids</h2>
@@ -228,7 +228,7 @@
             </div>
             <div class="sec4-card">
               <div class="sec4-card-img">
-                <img src="images/sec4-img2.jpg" alt="No image" />
+                <img src="images/home/sec4-img2.jpg" alt="No image" />
               </div>
               <div class="sec4-img-name">
                 <h2>Mosque of Rifai and Sultan Hassan</h2>
@@ -254,7 +254,7 @@
             </div>
             <div class="sec4-card">
               <div class="sec4-card-img">
-                <img src="images/sec4-img3.jpg" alt="No image" />
+                <img src="images/home/sec4-img3.jpg" alt="No image" />
               </div>
               <div class="sec4-img-name">
                 <h2>Red Sea Mountains</h2>
@@ -289,7 +289,7 @@
         <!-- section 6 -->
         <div class="section6">
           <div class="sec6-img">
-            <img src="images/sec6-img1.jpg" alt="No image" />
+            <img src="images/home/sec6-img1.jpg" alt="No image" />
           </div>
           <div class="sec6-content">
             <h1>We Can Make Your Tour Most Enjoyable Holiday Ever</h1>
@@ -379,7 +379,7 @@
             <!-- rate 1 -->
             <div class="userRate">
               <div class="userImg">
-                <img src="images/ahmed.jpeg" alt="image not found" />
+                <img src="images/home/ahmed.jpeg" alt="image not found" />
               </div>
               <div class="userNameAndRate">
                 <h2>Ahmed</h2>
@@ -391,7 +391,7 @@
             <!-- rate 2 -->
             <div class="userRate">
               <div class="userImg">
-                <img src="images/khaled.jpeg" alt="image not found" />
+                <img src="images/home/khaled.jpeg" alt="image not found" />
               </div>
               <div class="userNameAndRate">
                 <h2>Khaled</h2>
@@ -403,7 +403,7 @@
             <!-- rate 3 -->
             <div class="userRate">
               <div class="userImg">
-                <img src="images/user.png" alt="image not found" />
+                <img src="images/home/user.png" alt="image not found" />
               </div>
               <div class="userNameAndRate">
                 <h2>Toaa</h2>
@@ -414,7 +414,7 @@
             </div>
 
             <div class="img">
-              <img src="images/sec8-img1.jpg" alt="image not found" />
+              <img src="images/home/sec8-img1.jpg" alt="image not found" />
             </div>
           </div>
         </div>
@@ -424,13 +424,13 @@
             <!-- slide 1 -->
             <div class="mySlides fade">
               <div class="sec9-img">
-                <img src="images/sec9-img1.png" alt="image not found" />
+                <img src="images/home/sec9-img1.png" alt="image not found" />
               </div>
               <div class="sec9-content">
                 <h2>What Our Customer Say</h2>
                 <div class="customer">
                   <div class="customer-img">
-                    <img src="images/mohamed.jpeg" alt="image not found" />
+                    <img src="images/home/mohamed.jpeg" alt="image not found" />
                   </div>
                   <div class="nameAndJop">
                     <h3>Mohamed Khaled</h3>
@@ -456,13 +456,13 @@
             <!-- slide 2 -->
             <div class="mySlides fade">
               <div class="sec9-img">
-                <img src="images/sec9-img1.png" alt="image not found" />
+                <img src="images/home/sec9-img1.png" alt="image not found" />
               </div>
               <div class="sec9-content">
                 <h2>What Our Customer Say</h2>
                 <div class="customer">
                   <div class="customer-img">
-                    <img src="images/user.png" alt="image not found" />
+                    <img src="images/home/user.png" alt="image not found" />
                   </div>
                   <div class="nameAndJop">
                     <h3>Tasneem Helmy</h3>
