edit some icon issues

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -13,56 +13,55 @@
       rel="stylesheet"
     />
     <!-- keyframes link -->
-    <link rel="stylesheet" href="../css/keyframes.css" />
+    <link rel="stylesheet" href="./../css/keyframes.css" />
   </head>
 
   <body>
     <div class="container">
       <div class="logo">
-        <img src="../images/Logo.png" >
+        <img src="./../images/Logo.png" />
       </div>
 
       <div class="Sign-up">
-        <div id ="hedder">
-          <img  src="..\images\Signup\Signup.png">
+        <div id="hedder">
+          <img src="./../images/Signup/Signup.png" />
         </div>
 
-        <p> Sign Up </p>
+        <p>Sign Up</p>
 
         <form class="inputs">
           <span class="F-name">
-            <input  type="text" required="required">
-            <label >First Name</label> 
-         </span>
+            <input type="text" required="required" />
+            <label>First Name</label>
+          </span>
           <span class="L-name">
-            <input  type="text" required="required">
+            <input type="text" required="required" />
             <label id="l-name">Last Name</label>
           </span>
           <div>
-             <input type="email" required="required"> 
-              <label >Email</label>                                          <br>
+            <input type="email" required="required" />
+            <label>Email</label> <br />
           </div>
 
           <div>
-             <input  type="password" required="required">
-              <label >Password</label>                                      <br>
+            <input type="password" required="required" />
+            <label>Password</label> <br />
           </div>
 
           <div>
-             <input  type="password" required="required">
-              <label >Confirm Password</label>                                      <br>
+            <input type="password" required="required" />
+            <label>Confirm Password</label> <br />
           </div>
 
           <div>
-              <input id="S-up" type="submit" name="submit" value="Sign Up">
+            <input id="S-up" type="submit" name="submit" value="Sign Up" />
           </div>
-        
         </form>
 
         <div class="line">
-          <hr id="top">
-          <p >OR</p>
-          <hr id="bottom">
+          <hr id="top" />
+          <p>OR</p>
+          <hr id="bottom" />
         </div>
 
         <div id="text">
@@ -70,26 +69,22 @@
         </div>
 
         <div class="google">
-          <div id="google">
-            <a href="#">Cotinue with Google </a>                             <br>
-          </div>
-          <img src="..\images\login\GoogleIcon.png">
+          <div id="google"><a href="#">Continue with Google </a> <br /></div>
+          <img src="./../images/login/GoogleIcon.png" />
         </div>
 
         <div class="apple">
           <div id="apple">
-            <a href="#">Cotinue with Apple </a> 
+            <a href="#">Continue with Apple </a>
           </div>
-          <img src="..\images\login\AppleIcon.png">
+          <img src="../images/login/AppleIcon.png" />
         </div>
 
-           <div id="go">
-           <span> Got an account?</span>
-           <a href="../pages/sign-up.html">Sign in</a>
-           </div>
-
-       </div>
-
+        <div id="go">
+          <span> Got an account?</span>
+          <a href="./../pages/sign-up.html">Sign in</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
