--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -14,48 +14,46 @@
     />
 
     <!-- keyframes link -->
-    <link rel="stylesheet" href="../css/keyframes.css" />
+    <link rel="stylesheet" href="./../css/keyframes.css" />
   </head>
 
   <body>
     <div class="container">
       <div class="logo">
-        <img src="../images/Logo.png" >
+        <img src="./../images/Logo.png" />
       </div>
 
       <div class="login">
-        <div id ="hedder">
-          <img  src="..\images\login\login.png">
+        <div id="hedder">
+          <img src="./../images/login/login.png" />
         </div>
 
-        <p> Sign in </p>
+        <p>Sign in</p>
 
-      
         <form class="inputs">
           <div>
-             <input type="email" placeholder=" " required="required"> 
-              <label >Email</label>                                          <br>
+            <input type="email" placeholder=" " required="required" />
+            <label>Email</label> <br />
           </div>
 
           <div>
-             <input  type="password"  placeholder=" "  required="required">
-              <label >Password</label>                                      <br>
+            <input type="password" placeholder=" " required="required" />
+            <label>Password</label> <br />
           </div>
 
           <div>
-              <a href="https://fonts.googleapis.com">Forgot Password?</a>       <br>
+            <a href="https://fonts.googleapis.com">Forgot Password?</a> <br />
           </div>
 
           <div>
-              <input id="S-in" type="submit" name="submit" value="Login">
+            <input id="S-in" type="submit" name="submit" value="Login" />
           </div>
-        
         </form>
 
         <div class="line">
-          <hr id="top">
-          <p >OR</p>
-          <hr id="bottom">
+          <hr id="top" />
+          <p>OR</p>
+          <hr id="bottom" />
         </div>
 
         <div id="text">
@@ -63,27 +61,22 @@
         </div>
 
         <div class="google">
-          <div id="google">
-            <a href="#">Cotinue with Google </a>                             <br>
-          </div>
-          <img src="..\images\login\GoogleIcon.png">
+          <div id="google"><a href="#">Continue with Google </a> <br /></div>
+          <img src="./../images/login/GoogleIcon.png" />
         </div>
-
 
         <div class="apple">
           <div id="apple">
-            <a href="#">Cotinue with Apple </a> 
+            <a href="#">Continue with Apple </a>
           </div>
-          <img src="..\images\login\AppleIcon.png">
+          <img src="./../images/login/AppleIcon.png" />
         </div>
 
-           <div id="go">
-           <span>no account?</span>
-           <a href="../pages/sign-up.html">Sign up</a>
-           </div>
-
-       </div>
-
+        <div id="go">
+          <span>no account?</span>
+          <a href="./../pages/sign-up.html">Sign up</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
