edit some icon issues

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -25,7 +25,7 @@
 
       <div class="login">
         <div id="hedder">
-          <img src="./../images/login/login.png" />
+          <img src="./../images/login/Login.png" />
         </div>
 
         <p>Sign in</p>
@@ -62,14 +62,14 @@
 
         <div class="google">
           <div id="google"><a href="#">Continue with Google </a> <br /></div>
-          <img src="./../images/login/GoogleIcon.png" />
+          <img src="./../images/Login/GoogleIcon.png" />
         </div>
 
         <div class="apple">
           <div id="apple">
             <a href="#">Continue with Apple </a>
           </div>
-          <img src="./../images/login/AppleIcon.png" />
+          <img src="./../images/Login/AppleIcon.png" />
         </div>
 
         <div id="go">
