--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -70,19 +70,19 @@
 
         <div class="google">
           <div id="google"><a href="#">Continue with Google </a> <br /></div>
-          <img src="./../images/login/GoogleIcon.png" />
+          <img src="./../images/Login/GoogleIcon.png" />
         </div>
 
         <div class="apple">
           <div id="apple">
             <a href="#">Continue with Apple </a>
           </div>
-          <img src="../images/login/AppleIcon.png" />
+          <img src="../images/Login/AppleIcon.png" />
         </div>
 
         <div id="go">
           <span> Got an account?</span>
-          <a href="./../pages/sign-up.html">Sign in</a>
+          <a href="./../pages/sign-in.html">Sign in</a>
         </div>
       </div>
     </div>
